
Version 2.1.4: (2010-05-21):
	* Use guile-config to get librariy locations, include-files.

Version 2.1.3: (2010-05-18):
	* Remove deprecated header file guile/gh.h from test case.
	* Addition of sqlite3-dbd from Julian Kalbhenn <jkal@gmx.net> and tantalum@online.de 
	* Updated documentation, example usage.

Version 2.1.2 (2008-11-24):
	* Patch from Mike Gran, fixes function names in assert.
	* Minor cleanup; avoid un-needed malloc/free.

2008-09-15 Linas Vepstas <linasvepstas@gmail.com>

	* Numerous bug fixes for crashes, hangs, memory leaks.
	* Bump version to release 2.1.1

2006-09-26  Maurizio Boriani  <baux@gnu.org>

	* DBI-VERIONS: Bump to release 2.0.0.
	* NEWS: Update.
	* configure.ac: Fix libguile check.

2005-07-13  Maurizio Boriani  <baux@gnu.org>

	* DBI-VERIONS: Bump to release 1.0.4.
	* NEWS: Update.

2005-03-21  Maurizio Boriani  <baux@gnu.org>

	* configure.ac: Add output conf file for check-guile-dbi, used by
	greg test framework.
	* DBI-VERSION: Bump release.
	* TODO: Update.

2005-02-19  Maurizio Boriani  <baux@member.fsf.org>

	* README: Add software dependencies.
	* configure.ac: Test for greg suite.

2005-02-11  Maurizio Boriani  <baux@member.fsf.org>

	* Init baux 1.0 arch revision.

2005-02-04  Maurizio Boriani  <baux@member.fsf.org>

	* TODO: Update.
	* Makefile.am: Assign copyright to FSF.
	* README: Add varius info.
	* configure.ac: Test libguile presence.
	* DBI-VERSION: Bump release.
	* NEWS: Update.

2005-01-24  Maurizio Boriani  <baux@member.fsf.org>

	* TODO: Write doc marked done.

2005-01-14  Maurizio Boriani  <baux@member.fsf.org>

	* Makefile.am: Forgotten DBI-VERSION as extra dist file.
	Add doc subdir.
	* DBI-VERSION: Incremented micro version var.
	* configure.ac: Add makefile output for doc.

2005-01-13  Maurizio Boriani  <baux@member.fsf.org>

	* DBI-VERSION: New, versions var
	* TODO: New, thins todo.
	* Makefile.am: Add include subdir.
	Copyright assigner changed to myself
	* configure.ac: Fixed some stuff.